Squashed commit of the following:
commit a0e07b4aec8d6e8dac16043daa5e484316270158
Author: Jared Cole <jaredrcole@gmail.com>
Date:   Sat Jun 10 18:20:15 2023 -0500

    ui/navbar
    * adds package for rendering Tailwind in Storybook
    * adds headlessui and heroicons libraries
    * adds Navbar component and story

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,6 +29,7 @@
     "@storybook/addon-interactions": "^7.0.18",
     "@storybook/addon-links": "^7.0.18",
     "@storybook/addon-mdx-gfm": "^7.0.18",
+    "@storybook/addon-styling": "^1.1.0",
     "@storybook/react": "^7.0.18",
     "@storybook/react-vite": "^7.0.18",
     "@storybook/testing-library": "^0.1.0",
