Squashed commit of the following:
commit 1d0c1a5acaa90a7ebf355fd1478d80966b6d122d
Author: Jared Cole <jaredrcole@gmail.com>
Date:   Sat Jul 15 20:26:41 2023 -0500

    feature/pagination
    * Updates api to deal with offset
    * Fixes misc pagination issues

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VITE_API_BASE_URL=https://gateway.marvel.com/v1/public/
-VITE_API_KEY_HASH=?ts=1&apikey=018e859b467293829d6e990c5efe21ec&hash=185c6a7820c46b821218f7864681902e
+VITE_API_TS=1
+VITE_API_KEY=018e859b467293829d6e990c5efe21ec
+VITE_API_HASH=185c6a7820c46b821218f7864681902e
