--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.7"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.7.3",
     "@babel/core": "^7.22.1",
     "@mdx-js/react": "^1.6.22",
     "@storybook/addon-actions": "^7.0.18",
