--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.13",
+    "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.27",
